--- a/_config.yml
+++ b/_config.yml
@@ -4,20 +4,20 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://holzkuerten.github.io"
+url: "http://uttzu.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
+#url: "http://uttzu.github.io/projectname"
 #baseurl: "/projectname"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: holzhandel kuerten website
+title: HoKü Website
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis!
 
 # --- Navigation bar options --- #
 
