Hokü website nach HoKü

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: HoKü Website
+title: HoKü
 
 # Short description of your site
 description: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis!
