--- a/_config.yml
+++ b/_config.yml
@@ -17,14 +17,18 @@ baseurl: ""
 title: HoKü
 
 # Short description of your site
-description: Herzlich willkommen bei Holzhandel Kürten in Windeck, Rhein-Sieg-Kreis!
+description: This site is gonna be the main webpage of holz.
 
 # --- Navigation bar options --- #
 
 # List of links in the navigation bar
 navbar-links:
+  Kaminholz: "sims"
+  Bau- und Schnittholz: "woodcutter"
+  Holzbau: "craft"
+  Zäune: "fence"
+  Preisliste: "costs"
   Über uns: "aboutme"
-#  Schöne Bildchen:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
 #    - Learn markdown: "http://www.markdowntutorial.com/"
 #    - GitHub Pages: "https://pages.github.com/"
