--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ navbar-links:
   Kaminholz: "sims"
   Bau- und Schnittholz: "woodcutter"
   Holzbau: "craft"
+    Massivholzmöbel: "couch"
+    Carports: "garage"
+    Kunst: "art"
   Zäune: "fence"
   Preisliste: "costs"
   Über uns: "aboutme"
