--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ navbar-links:
   Kaminholz: "sims"
   Bau- und Schnittholz: "woodcutter"
   Holzbau: "craft"
-    Massivholzmöbel: "couch"
-    Carports: "garage"
+#    Massivholzmöbel: "couch"
+#    Carports: "garage"
     Kunst: "art"
   Zäune: "fence"
   Preisliste: "costs"
